[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heycafe"
version = "0.1.0"
description = "Python SDK for the Hey.Café Social Media Platform REST API"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Hey.Café SDK" }]
keywords = ["heycafe", "social", "api", "rest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
]
quality = [
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]
publish = [
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Documentation = "https://endpoint.hey.cafe"
Homepage = "https://hey.cafe"

[tool.setuptools.packages.find]
where = ["."]
include = ["heycafe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration (call real Hey.Café API) (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["heycafe"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = ["tests", "heycafe/client.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/"]
